<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>


    <string name="main_act_header">My Nanodegree Apps!</string>
    <string name="spotify">Spotify streamer</string>
    <string name="scores">Scores app</string>
    <string name="library">Library app</string>
    <string name="build_it">Build it bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My own App</string>
</resources>
