<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_act_header"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="match_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:id="@+id/spotify"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:id="@+id/scores"
            android:layout_below="@id/spotify"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:id="@+id/library"
            android:layout_below="@id/scores"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it"
            android:id="@+id/build_it"
            android:layout_below="@id/library"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/xyz_reader"
            android:layout_below="@id/build_it"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/capstone"
            android:layout_below="@id/xyz_reader"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>
